[gd_scene load_steps=21 format=2]

[ext_resource path="res://assets/images/motherfucker.png" type="Texture" id=1]
[ext_resource path="res://assets/images/yarou.png" type="Texture" id=2]
[ext_resource path="res://assets/images/emulogic.tres" type="DynamicFont" id=3]
[ext_resource path="res://TitleScreen.gd" type="Script" id=4]

[sub_resource type="Theme" id=14]
default_font = ExtResource( 3 )
Button/colors/Color = Color( 0, 0, 0, 0 )
Button/fonts/Font = null

[sub_resource type="DynamicFontData" id=4]
font_path = "res://assets/images/emulogic.ttf"

[sub_resource type="DynamicFont" id=15]
size = 8
font_data = SubResource( 4 )

[sub_resource type="StyleBoxEmpty" id=19]

[sub_resource type="RectangleShape2D" id=28]
extents = Vector2( 30, 6 )

[sub_resource type="RectangleShape2D" id=29]

[sub_resource type="BitmapFont" id=1]

[sub_resource type="Theme" id=20]
/fonts/Font = SubResource( 1 )

[sub_resource type="DynamicFont" id=21]
size = 8
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 4 )

[sub_resource type="BitmapFont" id=8]

[sub_resource type="Theme" id=24]
/fonts/Font = SubResource( 8 )

[sub_resource type="DynamicFontData" id=25]
font_path = "res://assets/images/emulogic.ttf"

[sub_resource type="DynamicFont" id=26]
size = 32
font_data = SubResource( 25 )

[sub_resource type="RectangleShape2D" id=27]
extents = Vector2( 65, 20 )

[sub_resource type="BitmapFont" id=22]

[sub_resource type="Theme" id=23]
/fonts/Font = SubResource( 22 )

[node name="Node2D" type="Node"]
script = ExtResource( 4 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]
layer = -1

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
margin_left = -43.0
margin_top = -24.0
margin_right = 213.0
margin_bottom = 144.0
color = Color( 0, 0.439216, 0.92549, 1 )

[node name="ColorRect2" type="ColorRect" parent="CanvasLayer"]
margin_left = -43.0
margin_top = 206.0
margin_right = 213.0
margin_bottom = 374.0
color = Color( 0.12549, 0.219608, 0.92549, 1 )

[node name="BG" type="Sprite" parent="CanvasLayer"]
position = Vector2( 85, 147 )
texture = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="CanvasLayer"]
position = Vector2( 90.75, 235.967 )
scale = Vector2( 0.3025, 0.293443 )
texture = ExtResource( 1 )

[node name="Credits" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 27.0
margin_top = 143.0
margin_right = 91.0
margin_bottom = 163.0
theme = SubResource( 14 )
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 15 )
custom_styles/normal = SubResource( 19 )
text = "Credits"

[node name="TouchScreenButton" type="TouchScreenButton" parent="Credits"]
shape = SubResource( 28 )

[node name="Fuck" type="Node2D" parent="."]

[node name="WhatsThis" type="TouchScreenButton" parent="Fuck"]
position = Vector2( 32, 205 )
shape = SubResource( 29 )

[node name="CreditText" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -108.0
margin_top = -9.0
margin_right = 108.0
margin_bottom = 144.0
theme = SubResource( 20 )
custom_fonts/font = SubResource( 21 )
text = "
- CREDITS -
game by
PirateGameThing

based on shamshon
by smart solutions est

lose art by awipan *
surprise sprite by
jungledrew2005 *
secret by davidpcm *

* used w/o permission
sorry it's a shitpost
i hope this is okay

made in godot engine"
align = 1
valign = 1

[node name="PlayButton" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -64.0
margin_top = -20.0
margin_right = 64.0
margin_bottom = 20.0
theme = SubResource( 24 )
custom_fonts/font = SubResource( 26 )
text = "Play"
align = 1
valign = 1

[node name="Button" type="TouchScreenButton" parent="PlayButton"]
shape = SubResource( 27 )

[node name="Score" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -80.0
margin_top = -119.0
margin_right = 80.0
margin_bottom = -99.0
theme = SubResource( 23 )
custom_fonts/font = ExtResource( 3 )
text = "BEST SCORE"
align = 1
valign = 1

[node name="ScoreLabel" type="Label" parent="Score"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -74.5
margin_top = 10.0
margin_right = 74.5
margin_bottom = 50.0
theme = SubResource( 24 )
custom_fonts/font = SubResource( 26 )
text = "0"
align = 1
valign = 1

[connection signal="pressed" from="Credits/TouchScreenButton" to="." method="_on_TouchScreenButton_pressed"]
[connection signal="pressed" from="Fuck/WhatsThis" to="." method="_on_WhatsThis_pressed"]
[connection signal="pressed" from="PlayButton/Button" to="." method="_on_Button_pressed"]
